@@ -1,3 +1,8 @@
+2009-01-18  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* include/std/thread (__thread_data_base::__run): Make non-const.
+	* testsuite/30_threads/thread/cons/5.cc: New.
+
 2009-01-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* src/Makefile.am (sources): Add math_stubs_float.cc.
